--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,8 @@
 
 body {
 	font-family: 'Roboto', sans-serif;
-	background: url('../assets/background-img.jpg') top center;
+	/* url('../assets/background-img.jpg') top center */
+	background: white;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
