--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,10 @@
 	/*border: 1px solid red;*/
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 body {
 	font-family: 'Roboto', sans-serif;
 	/* url('../assets/background-img.jpg') top center */
@@ -14,11 +18,34 @@ body {
 	background-size: cover;
 }
 
-/* Conteúdo */
-
-#container {
-	max-width: 1100px;
+a {
+	transition: 0.5s;
 }
+
+.bg-blue {
+	background: #2980b9;
+	filter: brightness(1.3);
+}
+
+/* Início */
+#inicio {
+	height: 100vh;
+}
+
+/* Como usar */
+#como-usar {
+	height: 100vh;
+	background: url('../assets/background-img-2.jpg');
+	filter: brightness(1.2);
+	color: black;
+}
+
+/* Aplicativo - formulários */
+#aplicativo {
+	height: 100vh;
+}
+
+/* Conteúdo */
 
 p.ref {
 	margin: 0;
@@ -26,6 +53,7 @@ p.ref {
 	font-size: 0.8rem;
 	color: gray;
 }
+
 	
 /* Estilos do formulário */
 #div-form {
@@ -50,3 +78,4 @@ button.btn-color {
 button.btn-color:hover {
 	filter: brightness(0.8);
 }
+
